--- a/.github/workflows/update-major-version-tags.yml
+++ b/.github/workflows/update-major-version-tags.yml
@@ -19,11 +19,12 @@ on:
       updated:
         description: "Whether tags were successfully updated"
         value: ${{ jobs.update-tags.outputs.updated }}
-  push:
 
 jobs:
   update-tags:
     name: "🚀 Execute Tag Updates"
+    # Only run on tag pushes or releases, not branch pushes
+    if: startsWith(github.ref, 'refs/tags/') || github.ref_type == 'tag' || github.event_name == 'release'
     runs-on: ubuntu-latest
     outputs:
       major-version: ${{ steps.tags.outputs.major-version }}
