--- a/.github/workflows/local-update-major-version-tags.yml
+++ b/.github/workflows/local-update-major-version-tags.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   update-tags:
     name: "📌 Update Major Version Tags"
+    # Only run on tag pushes or releases, not branch pushes
+    if: startsWith(github.ref, 'refs/tags/') || github.ref_type == 'tag' || github.event_name == 'release'
     uses: ./.github/workflows/update-major-version-tags.yml
     with:
       create_documentation: true
