--- a/.github/actions/git/jobs/fix-orphaned-version-tags/action.yml
+++ b/.github/actions/git/jobs/fix-orphaned-version-tags/action.yml
@@ -21,23 +21,24 @@ runs:
       id: fix-orphans
       shell: bash
       run: |
-        echo "🔍 Checking for orphaned major version tags..."
+        echo "🔍 Checking for orphaned major and minor version tags..."
 
         FIXED_TAGS=""
         ORPHANS_FOUND="false"
+        ORPHANED_TAGS_FILE=$(mktemp)
 
         # Get all version tags and sort them
         ALL_TAGS=$(git tag -l "v*.*.*" | sort -V)
 
-        # Find all major versions (v1, v2, etc.)
-        MAJOR_VERSIONS=$(echo "$ALL_TAGS" | sed 's/v\([0-9]*\)\..*/v\1/' | sort -u)
-        
-        # Find all minor versions (v1.0, v1.1, v2.0, etc.)
-        MINOR_VERSIONS=$(echo "$ALL_TAGS" | sed 's/v\([0-9]*\.[0-9]*\)\..*/v\1/' | sort -u)
+        # Get all existing major version tags (v1, v2, etc.)
+        EXISTING_MAJOR_TAGS=$(git tag -l | grep -E "^v[0-9]+$" | sort -V)
 
-        # Check major version tags for orphans
-        for MAJOR_TAG in $MAJOR_VERSIONS; do
-          echo "🔍 Checking major tag: $MAJOR_TAG"
+        # Get all existing minor version tags (v1.0, v1.1, etc.) 
+        EXISTING_MINOR_TAGS=$(git tag -l | grep -E "^v[0-9]+\.[0-9]+$" | sort -V)
+
+        # Check existing major version tags for orphans
+        for MAJOR_TAG in $EXISTING_MAJOR_TAGS; do
+          echo "🔍 Checking existing major tag: $MAJOR_TAG"
           
           # Get the latest patch version for this major version
           MAJOR_NUM=$(echo "$MAJOR_TAG" | sed 's/v//')
@@ -48,13 +49,12 @@ runs:
             MAJOR_COMMIT=$(git rev-list -n 1 "$MAJOR_TAG" 2>/dev/null || echo "")
             LATEST_COMMIT=$(git rev-list -n 1 "$LATEST_PATCH")
             
-            if [ "$MAJOR_COMMIT" != "$LATEST_COMMIT" ]; then
-              echo "🚨 Orphaned major tag detected: $MAJOR_TAG points to $MAJOR_COMMIT, should point to $LATEST_COMMIT ($LATEST_PATCH)"
-              
-              # Fix the orphaned tag
-              git tag -f "$MAJOR_TAG" "$LATEST_COMMIT"
-              echo "✅ Fixed: $MAJOR_TAG now points to $LATEST_PATCH ($LATEST_COMMIT)"
-              
+            echo "  📍 $MAJOR_TAG points to: $MAJOR_COMMIT"
+            echo "  📍 $LATEST_PATCH points to: $LATEST_COMMIT"
+            
+            if [ "$MAJOR_COMMIT" != "$LATEST_COMMIT" ] && [ -n "$MAJOR_COMMIT" ]; then
+              echo "🚨 Orphaned major tag detected: $MAJOR_TAG should point to $LATEST_PATCH"
+              echo "$MAJOR_TAG|$LATEST_COMMIT|$LATEST_PATCH" >> "$ORPHANED_TAGS_FILE"
               FIXED_TAGS="${FIXED_TAGS}${MAJOR_TAG}→${LATEST_PATCH} "
               ORPHANS_FOUND="true"
             else
@@ -63,9 +63,9 @@ runs:
           fi
         done
 
-        # Check minor version tags for orphans  
-        for MINOR_TAG in $MINOR_VERSIONS; do
-          echo "🔍 Checking minor tag: $MINOR_TAG"
+        # Check existing minor version tags for orphans  
+        for MINOR_TAG in $EXISTING_MINOR_TAGS; do
+          echo "🔍 Checking existing minor tag: $MINOR_TAG"
           
           # Get the latest patch version for this minor version
           MINOR_PATTERN=$(echo "$MINOR_TAG" | sed 's/v//')
@@ -76,13 +76,12 @@ runs:
             MINOR_COMMIT=$(git rev-list -n 1 "$MINOR_TAG" 2>/dev/null || echo "")
             LATEST_COMMIT=$(git rev-list -n 1 "$LATEST_PATCH")
             
-            if [ "$MINOR_COMMIT" != "$LATEST_COMMIT" ]; then
-              echo "🚨 Orphaned minor tag detected: $MINOR_TAG points to $MINOR_COMMIT, should point to $LATEST_COMMIT ($LATEST_PATCH)"
-              
-              # Fix the orphaned tag
-              git tag -f "$MINOR_TAG" "$LATEST_COMMIT"
-              echo "✅ Fixed: $MINOR_TAG now points to $LATEST_PATCH ($LATEST_COMMIT)"
-              
+            echo "  📍 $MINOR_TAG points to: $MINOR_COMMIT"
+            echo "  📍 $LATEST_PATCH points to: $LATEST_COMMIT"
+            
+            if [ "$MINOR_COMMIT" != "$LATEST_COMMIT" ] && [ -n "$MINOR_COMMIT" ]; then
+              echo "🚨 Orphaned minor tag detected: $MINOR_TAG should point to $LATEST_PATCH"
+              echo "$MINOR_TAG|$LATEST_COMMIT|$LATEST_PATCH" >> "$ORPHANED_TAGS_FILE"
               FIXED_TAGS="${FIXED_TAGS}${MINOR_TAG}→${LATEST_PATCH} "
               ORPHANS_FOUND="true"
             else
@@ -95,8 +94,32 @@ runs:
         echo "fixed-tags=${FIXED_TAGS}" >> $GITHUB_OUTPUT
         echo "orphans-found=${ORPHANS_FOUND}" >> $GITHUB_OUTPUT
 
+        # Build JSON array for orphaned tags
         if [ "$ORPHANS_FOUND" = "true" ]; then
-          echo "🔧 Fixed orphaned tags: $FIXED_TAGS"
+          echo "🔧 Building JSON array for orphaned tags..."
+          
+          JSON_ARRAY="["
+          FIRST=true
+          
+          while IFS='|' read -r tag_name target_sha latest_patch; do
+            if [ "$FIRST" = true ]; then
+              FIRST=false
+            else
+              JSON_ARRAY="${JSON_ARRAY},"
+            fi
+            JSON_ARRAY="${JSON_ARRAY}{\"tag\":\"${tag_name}\",\"sha\":\"${target_sha}\"}"
+          done < "$ORPHANED_TAGS_FILE"
+          
+          JSON_ARRAY="${JSON_ARRAY}]"
+          echo "orphaned-tags-json=${JSON_ARRAY}" >> $GITHUB_OUTPUT
+          echo "🔧 Orphaned tags JSON: $JSON_ARRAY"
         else
-          echo "✅ No orphaned major version tags found"
+          echo "✅ No orphaned major/minor version tags found"
         fi
+
+    - name: Fix orphaned tags using GitHub API
+      if: steps.fix-orphans.outputs.orphans-found == 'true'
+      uses: CLDMV/.github/.github/actions/github/api/update-tag@v1
+      with:
+        tag_data: ${{ steps.fix-orphans.outputs.orphaned-tags-json }}
+        github_token: ${{ github.token }}
