--- a/.github/actions/github/api/update-tag/action.yml
+++ b/.github/actions/github/api/update-tag/action.yml
@@ -23,100 +23,118 @@ outputs:
 runs:
   using: composite
   steps:
-    - name: Update tag(s) via GitHub API
+    - name: Update tag(s) via GitHub API (inline Node)
       id: update
-      shell: bash
       env:
         GITHUB_TOKEN: ${{ inputs.github_token }}
+        TAG_DATA: ${{ inputs.tag_data }}
+        REPO: ${{ github.repository }}
+      shell: bash
       run: |
-        TAG_DATA="${{ inputs.tag_data }}"
-        SUCCESS=true
-        UPDATED_COUNT=0
-        MESSAGES=""
+        node <<'EOF'
+        const fs = require('fs');
+        const out = process.env.GITHUB_OUTPUT;
+        const repo = process.env.REPO;
+        const token = process.env.GITHUB_TOKEN;
+        let raw = process.env.TAG_DATA || '';
 
-        # Check if input is base64 encoded JSON, regular JSON array, or single tag
-        if [[ "$TAG_DATA" =~ ^[A-Za-z0-9+/]+=*$ ]] && [ ${#TAG_DATA} -gt 20 ]; then
-          echo "🔓 Decoding base64 JSON data"
-          TAG_DATA=$(echo "$TAG_DATA" | base64 -d)
-          echo "📄 Decoded JSON: $TAG_DATA"
-        fi
+        const headers = {
+          'Authorization': `Bearer ${token}`,
+          'Accept': 'application/vnd.github+json',
+          'X-GitHub-Api-Version': '2022-11-28'
+        };
+        const base = `https://api.github.com/repos/${repo}`;
 
-        if [[ "$TAG_DATA" =~ ^\[ ]]; then
-          echo "🔄 Processing multiple tags from JSON array"
-          
-          # Parse JSON array and process each tag
-          echo "$TAG_DATA" | jq -r '.[] | "\(.tag):\(.sha)"' | while IFS=':' read -r tag_name target_sha; do
-            echo "🏷️ Updating tag $tag_name to point to $target_sha"
-            
-            # Use the correct GitHub API endpoint for updating tag references
-            if gh api repos/${{ github.repository }}/git/refs/tags/$tag_name \
-                 --method PATCH \
-                 --field sha="$target_sha" \
-                 --field force=true 2>&1; then
-              echo "✅ Successfully updated tag $tag_name"
-              ((UPDATED_COUNT++))
-            else
-              echo "❌ Failed to update tag $tag_name via PATCH, trying DELETE and CREATE approach"
-              
-              # Alternative approach: delete and recreate the tag
-              if gh api repos/${{ github.repository }}/git/refs/tags/$tag_name --method DELETE 2>/dev/null && \
-                 gh api repos/${{ github.repository }}/git/refs \
-                   --method POST \
-                   --field ref="refs/tags/$tag_name" \
-                   --field sha="$target_sha" 2>&1; then
-                echo "✅ Successfully recreated tag $tag_name"
-                ((UPDATED_COUNT++))
-              else
-                echo "❌ Failed to update/recreate tag $tag_name"
-                SUCCESS=false
-              fi
-            fi
-          done
-          
-        else
-          echo "🔄 Processing single tag"
-          
-          # Parse single tag format: tagname:sha
-          IFS=':' read -r tag_name target_sha <<< "$TAG_DATA"
-          
-          echo "🏷️ Updating tag $tag_name to point to $target_sha"
-          
-          # Use the correct GitHub API endpoint for updating tag references
-          if gh api repos/${{ github.repository }}/git/refs/tags/$tag_name \
-               --method PATCH \
-               --field sha="$target_sha" \
-               --field force=true 2>&1; then
-            echo "✅ Successfully updated tag $tag_name"
-            UPDATED_COUNT=1
-            MESSAGES="Tag $tag_name updated successfully"
-          else
-            echo "❌ Failed to update tag $tag_name via PATCH, trying DELETE and CREATE approach"
-            
-            # Alternative approach: delete and recreate the tag
-            if gh api repos/${{ github.repository }}/git/refs/tags/$tag_name --method DELETE 2>/dev/null && \
-               gh api repos/${{ github.repository }}/git/refs \
-                 --method POST \
-                 --field ref="refs/tags/$tag_name" \
-                 --field sha="$target_sha" 2>&1; then
-              echo "✅ Successfully recreated tag $tag_name"
-              UPDATED_COUNT=1
-              MESSAGES="Tag $tag_name recreated successfully"
-            else
-              echo "❌ Failed to update/recreate tag $tag_name"
-              SUCCESS=false
-              MESSAGES="Failed to update tag $tag_name"
-            fi
-          fi
-        fi
+        async function api(method, path, body) {
+          const res = await fetch(base + path, {
+            method,
+            headers,
+            body: body ? JSON.stringify(body) : undefined
+          });
+          if (res.ok) {
+            if (res.status === 204) return null;
+            return res.json();
+          }
+          const text = await res.text();
+          throw new Error(`${method} ${path} -> ${res.status} ${text}`);
+        }
 
-        # Set outputs
-        echo "success=$SUCCESS" >> $GITHUB_OUTPUT
-        echo "updated_count=$UPDATED_COUNT" >> $GITHUB_OUTPUT
-        echo "message=$MESSAGES" >> $GITHUB_OUTPUT
+        function parseTagData(raw) {
+          raw = raw.trim();
+          // base64 encoded JSON?
+          if (/^[A-Za-z0-9+/]+=*$/.test(raw) && raw.length > 20 && !raw.startsWith('[')) {
+            console.log('🔓 Decoding base64 JSON data');
+            const buf = Buffer.from(raw, 'base64');
+            raw = buf.toString('utf8');
+            console.log('📄 Decoded JSON:', raw);
+          }
 
-        if [ "$SUCCESS" = true ]; then
-          echo "🎉 Successfully updated $UPDATED_COUNT tag(s)"
-        else
-          echo "💥 Some tag updates failed"
-          exit 1
-        fi
+          if (raw.startsWith('[')) {
+            console.log('🔄 Processing multiple tags from JSON array');
+            return JSON.parse(raw).map(o => `${o.tag}:${o.sha}`);
+          } else if (raw.includes(',')) {
+            console.log('🔄 Processing multiple tags from comma-separated format');
+            return raw.split(',').map(x => x.trim()).filter(Boolean);
+          } else {
+            console.log('🔄 Processing single tag');
+            return [raw];
+          }
+        }
+
+        async function updateTag(tag, sha) {
+          const refPath = `/git/refs/tags/${encodeURIComponent(tag)}`;
+          try {
+            await api('PATCH', refPath, { sha, force: true });
+            console.log(`✅ Successfully updated tag ${tag}`);
+            return true;
+          } catch (err) {
+            console.log(`❌ Failed to PATCH tag ${tag}: ${err.message}`);
+            console.log('↻ Trying delete and recreate approach...');
+            try {
+              await api('DELETE', refPath);
+            } catch {}
+            try {
+              await api('POST', `/git/refs`, { ref: `refs/tags/${tag}`, sha });
+              console.log(`✅ Successfully recreated tag ${tag}`);
+              return true;
+            } catch (err2) {
+              console.log(`❌ Failed to recreate tag ${tag}: ${err2.message}`);
+              return false;
+            }
+          }
+        }
+
+        (async () => {
+          let success = true;
+          let updatedCount = 0;
+          let messages = [];
+
+          const pairs = parseTagData(raw);
+          for (const pair of pairs) {
+            const [tag, sha] = pair.split(':');
+            console.log(`🏷️ Updating tag ${tag} to point to ${sha}`);
+            const ok = await updateTag(tag, sha);
+            if (ok) {
+              updatedCount++;
+              messages.push(`Tag ${tag} updated`);
+            } else {
+              success = false;
+              messages.push(`Tag ${tag} failed`);
+            }
+          }
+
+          fs.appendFileSync(out, `success=${success}\n`);
+          fs.appendFileSync(out, `updated_count=${updatedCount}\n`);
+          fs.appendFileSync(out, `message=${messages.join('; ')}\n`);
+
+          if (success) {
+            console.log(`🎉 Successfully updated ${updatedCount} tag(s)`);
+          } else {
+            console.log('💥 Some tag updates failed');
+            process.exit(1);
+          }
+        })().catch(err => {
+          console.error('::error::' + err.message);
+          process.exit(1);
+        });
+        EOF
